# mohr-2d-gui

./: .clang-format  .gitignore  CMakeLists.txt  MyGLCanvas.h  README.md  mohr-2d.cbp  mohr-2d.layout  mohr_2dApp.cpp  mohr_2dApp.h  mohr_2dMain.cpp  mohr_2dMain.h
wxsmith/: mohr_2ddialog.wxs
